# pinpad

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pinpad/: __init__.py  core.py  custom_types.py  types.py
src/pinpad/layouts/: eight.txt  five.txt  four.txt  seven.txt  six.txt  three.txt
tests/: __init__.py  test_core.py
