[project]
name = "pinpad"
version = "1.0.1"
description = "Visual Pin Pad Benchmark"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "gymnasium>=0.29.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.7.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_version = "3.8"
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY001",  # missing-copyright-notice
    "ISC001",  # single-line-implicit-string-concatenation
    "COM812",  # missing-comma-in-multiline
    "PLR0913", # too-many-arguments
    "S101",    # use of assert detected
]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["pinpad"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
