[project]
name = "pinpad"
version = "1.0.1"
description = "Visual Pin Pad Benchmark"
readme = "README.md"
authors = [
    { name = "nomutin", email = "nomura0508@icloud.com" }
]
requires-python = ">=3.8.18"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=1.24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.6",
]

[tool.mypy]
python_version = "3.8"
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv",]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["pinpad"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'
